--- a/style.css
+++ b/style.css
@@ -1721,7 +1721,7 @@ form div {
 
 /* =Header Menu (Primary)
 -------------------------------------------------------------- */
-.menu {
+/*.menu {
 	background-color: #585858;
 	background-image: -webkit-gradient(linear, left top, left bottom, from(#585858), to(#3d3d3d));
 	background-image: -webkit-linear-gradient(top, #585858, #3d3d3d);
@@ -1732,7 +1732,7 @@ form div {
 	clear: both;
 	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#585858, endColorstr=#3d3d3d);
 	margin: 0 auto;
-}
+}*/
 
 .main-nav {
 	clear:both;
@@ -1846,7 +1846,7 @@ form div {
 }
 
 ul.menu > li:hover {
-	background-color: #363636;
+	background-color: #6dad37;
 	color: #fff;
 }
 
@@ -2680,7 +2680,7 @@ table.cart td.actions .coupon .input-text {
 	line-height: 1.5em;
 }
 
-#footer a {
+/*#footer a {
 	color: #333;
 	font-weight: 400;
 }
@@ -2688,7 +2688,7 @@ table.cart td.actions .coupon .input-text {
 #footer a:hover {
     color: #444;
 }
-
+*/
 #footer-wrapper .grid.col-940 {
 	margin: 0;
 }
@@ -3323,4 +3323,353 @@ BDO[DIR="rtl"] {
     font-weight: normal;
     font-style: normal;
 
+}
+
+body {
+	font-family: allerregular;
+}
+
+.menu {
+	background: #74b83b; /* Old browsers */
+	background: -moz-linear-gradient(top,  #74b83b 0%, #67a334 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#74b83b), color-stop(100%,#67a334)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #74b83b 0%,#67a334 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #74b83b 0%,#67a334 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #74b83b 0%,#67a334 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #74b83b 0%,#67a334 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#74b83b', endColorstr='#6dad37',GradientType=0 ); /* IE6-9 */
+
+}
+
+.menu a {
+	border-left: 1px solid #74b83b;
+	color: #fff;
+	cursor: pointer;
+	display: block;
+	font-size: 13px;
+	font-weight: 700;
+	height: 45px;
+	line-height: 45px;
+	margin: 0;
+	padding: 0 0.9em;
+	position: relative;
+	text-decoration: none;
+	text-shadow: -1px 0 0 #666;
+	white-space: nowrap;
+}
+
+.menu a:hover {
+background: #6dad37; /* Old browsers */
+	background: -moz-linear-gradient(top,  #6dad37 0%, #439600 100%); /* FF3.6+ */
+	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6dad37), color-stop(100%,#439600)); /* Chrome,Safari4+ */
+	background: -webkit-linear-gradient(top,  #6dad37 0%,#439600 100%); /* Chrome10+,Safari5.1+ */
+	background: -o-linear-gradient(top,  #6dad37 0%,#439600 100%); /* Opera 11.10+ */
+	background: -ms-linear-gradient(top,  #6dad37 0%,#439600 100%); /* IE10+ */
+	background: linear-gradient(to bottom,  #6dad37 0%,#439600 100%); /* W3C */
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6dad37', endColorstr='#439600',GradientType=0 ); /* IE6-9 */
+}
+
+ul.menu > li:hover {
+	background-color: #439600;
+	color: #fff;
+}
+
+.tagline {
+	position: absolute;
+	right:0;
+	top:90px;
+	color:#6dad37;
+	font-size: 16px;
+	margin-left: 30%;
+}
+
+.media-btns a {
+	width: 36px;
+	height: 27px;
+	background-color: #6dad37;
+	display: block;
+	float:left;
+	
+}
+
+a.twitter {
+    background: url('images/twitter-icon.png');
+}
+
+a.facebook {
+    background: url('images/facebook-icon.png');
+}
+
+#header {
+	position: relative;
+}
+
+#logo {
+	margin: 29px 0 10px;
+}
+.media-btns a:first-child {
+	margin-right: 10px;
+}
+
+.media-btns {
+	float: right;
+	padding-top: 45px;
+}
+
+#featured {
+	height: 215px;
+	background-color: black;
+	overflow: hidden;
+}
+
+#featured h1, #featured h2, #featured p {
+	color: #fff;
+}
+
+.featured-title {
+	font-size: 40px;
+}
+
+#featured p {
+	font-size: 22px;
+	font-weight: 200;
+	line-height: 36px;
+	padding: 0 40px;
+	text-align: center;
+	margin-top: 22px;
+}
+
+a {
+    color: #6dad37;
+}
+
+a:hover {
+    color: 439600;
+}
+
+#widgets .post-title {
+    font-size: 16px;
+}
+
+#widgets li {
+    list-style: none;
+}
+
+#widgets ul {
+    padding: 0;
+}
+#widgets p {
+    color: #3F3F3F;
+    font-size: 16px;
+    line-height: 29px;
+}
+
+a.more-link {
+    display: block!important;
+}
+
+.col-300 > div {
+    height: 500px;
+    overflow: hidden;
+}
+.widget_twitter {
+    padding: 0;
+    font-family: "Helvetica Neue",Arial,sans-serif;
+    overflow: scroll!important;
+    position: relative;
+    padding-bottom: 40px;
+}
+
+.widget_twitter li {
+    border-bottom: 1px solid #E2E2E2;
+}
+
+.widget_twitter ul {
+    margin: 0;
+}
+
+.twitter-user-link {
+    font-weight: bold!important;
+    color: #333!important;
+    
+}
+.twitter-user-link:hover {
+    text-decoration: underline!important;
+    color: #6dad37!important;
+}
+
+
+.twitter-username, .time-meta{
+    font-size: 12px;
+    color: #999;    
+    display: block;
+}
+
+.time-meta {
+    line-height: 12px;
+}
+
+.tweet-content {
+    padding: 10px;
+    margin-left: 58px;
+}
+.twitter-avatar {
+    float:left;
+    margin-left: -58px;
+}
+
+.count-o {
+    display: none;
+}
+
+.widget_twitter .follow-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+.widget_twitter h3 {
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 20px;
+    padding: 10px;
+    color: #222;
+    text-rendering: optimizeLegibility;
+    border-bottom: 1px #e6e6e6 solid;
+}
+.from-meta {
+    display:none;
+}
+
+
+/* mobile styles */
+@media screen and (max-width: 650px) {
+    #featured, .tagline {
+        display: none;
+    }
+
+    #logo {
+        float: left;
+    }
+    .js .main-nav {
+
+    background: #74b83b; /* Old browsers */
+    background: -moz-linear-gradient(top,  #74b83b 0%, #67a334 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#74b83b), color-stop(100%,#67a334)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  #74b83b 0%,#67a334 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  #74b83b 0%,#67a334 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  #74b83b 0%,#67a334 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  #74b83b 0%,#67a334 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#74b83b', endColorstr='#6dad37',GradientType=0 ); /* IE6-9 */
+    }
+
+    .js .main-nav .menu li a {
+        color: #444;
+        font-size: 13px;
+        font-weight: normal;
+        height: 45px;
+        line-height: 45px;
+        padding: 0 15px;
+        border: none;
+        border-bottom: 1px solid #f5f5f5;
+        text-shadow: none;
+        text-align: left;
+        cursor: pointer;
+    }
+    
+    .js .main-nav .menu li.current_page_item,
+    .js .menu .current_page_item a,
+    .js .menu .current-menu-item a {
+        background-color: #f5f5f5;
+    }
+    
+    .js .main-nav .menu li li:hover {
+        background: none!important;
+    }
+    
+    .js .main-nav .menu li li a {
+        position: relative;
+        padding: 0 10px 0 30px;
+    }
+    
+    .js .main-nav .menu li li li a {
+        position: relative;
+        padding: 0 10px 0 40px;
+    }
+    
+    .js .main-nav .menu li a:hover,
+    .js .main-nav .menu li li a:hover {
+        background-image: none;
+        filter: none;
+        background-color: #f5f5f5!important;
+    }
+    
+    .js .main-nav .menu li li a::before {
+        content: '\2013';
+        position: absolute;
+        top: 0;
+        left: 20px;
+    }
+    
+    .js .main-nav .menu li li li a::before {
+        content: '\2013';
+        position: absolute;
+        top: 0;
+        left: 20px;
+    }
+    
+    .js .main-nav .menu li li li a::after {
+        content: '\2013';
+        position: absolute;
+        top: 0;
+        left: 30px;
+    }
+    
+    .js .main-nav .menu li ul {
+        position: static;
+        visibility: visible;
+        background-color: #fff;
+    }
+
+    .js .main-nav .menu ul {
+        min-width: 0;
+    }
+
+    .js .main-nav #responsive_current_menu_item {
+        display: block;
+        padding: 5px 40px 5px 10px;
+        color: #fff;
+        font-weight: 700;
+        cursor: pointer;
+    }
+    
+    .js .main-nav a#responsive_menu_button {
+        position: absolute;
+        display: block;
+        top: 0;
+        left: 100%;
+        height: 30px;
+        width: 23px;
+        margin-left: -30px;
+        background: url('images/select-icons.png') 0 5px no-repeat;
+    }
+    
+    .js .main-nav a#responsive_menu_button.responsive-toggle-open {
+        background: url('images/select-icons.png') 0 -46px no-repeat;
+    }
+     .media-btns {
+        float: right;
+        padding-top: 32px;
+    }
+
+    .media-btns a {
+        float: none;
+    }
+
+    .media-btns a:first-child {
+        margin: 0 0 10px 0;
+    }
+
+    .front-page #widgets {
+        margin-top: 0px;
+    }
 }
