--- a/style.css
+++ b/style.css
@@ -3357,7 +3357,19 @@ body {
 	text-shadow: -1px 0 0 #666;
 	white-space: nowrap;
 }
+.menu .current_page_item a, .menu .current-menu-item a {
+    background-color: #555;
+}
 
+.upw-image {
+    width: 260px;
+    height: 170px;
+    overflow: hidden;
+}
+
+.upw-image.no-image {
+    background: url('images/betpreview-logo.png') no-repeat 50% 50%;
+}
 .menu a:hover {
 background: #6dad37; /* Old browsers */
 	background: -moz-linear-gradient(top,  #6dad37 0%, #439600 100%); /* FF3.6+ */
@@ -3472,6 +3484,16 @@ a.more-link {
     height: 500px;
     overflow: hidden;
 }
+
+.widget_twitter .widget-title {
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 20px;
+    padding: 10px;
+    color: #222;
+    text-rendering: optimizeLegibility;
+    border-bottom: 1px #e6e6e6 solid;
+}
 .widget_twitter {
     padding: 0;
     font-family: "Helvetica Neue",Arial,sans-serif;
@@ -3540,7 +3562,26 @@ a.more-link {
     display:none;
 }
 
+.lcp_catlist li {
+    list-style: none;
+}
 
+.lcp_catlist ul {
+    padding: 0;
+}
+
+
+.lcp_catlist li a:first-child {
+    font-size: 16px;
+    font-weight: bold;
+    display: block;
+}
+
+.lcp_catlist img {
+    float: right;
+    padding: 0 0 10px 10px;
+    margin: 0;
+}
 /* mobile styles */
 @media screen and (max-width: 650px) {
     #featured, .tagline {
